[package]
name = "sdf-mock"
version = "0.1.0"
edition = "2021"

[lib]
name = "sdf_mock"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sdf-mcp"
path = "src/bin/mcp_server.rs"

[dependencies]
libsmx = "0.3.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
hex = "0.4"
# MCP Server 依赖
rmcp = { version = "1", features = ["server", "transport-streamable-http-server"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
hex = "0.4"
tempfile = "3"
